Fix nvd3 popover pointer positioning, add scroll wraps to the rota-overview-chart that allow to place popovers outside of the scroll container

--- a/sass/blocks/_boss-board.sass
+++ b/sass/blocks/_boss-board.sass
@@ -349,11 +349,6 @@ $block: ".boss-board"
     position: relative
     display: block
     width: 100%
-    overflow: hidden
-
-
-  &__graph-content
-    display: inline-block
 
 
   // $Board forecast
